kubernetes/deployment.yml
apiVersion: v1
kind: Namespace
metadata:
  name: test-gke
  labels:
    name: test-gke
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-app
  namespace: test-gke
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test-app
  template:
    metadata:
      labels:
        app: test-app
    spec:
      containers:
        - name: test-app-container
          image: asia-southeast2-docker.pkg.dev/ojk-asc/test/test-app:0.0.2
          resources:
            requests:
              cpu: 100m
              memory: 100Mi
          ports:
            - containerPort: 80
# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: test-app-service
#   namespace: test-gke
#   labels:
#     app: test-app
# spec:
#   ipFamilies:
#     - IPv4
#   ipFamilyPolicy: SingleStack
#   ports:
#     - name: '80-to-80'
#       nodePort: 30011
#       port: 80
#       protocol: TCP
#       targetPort: 8000
#   selector:
#     app: test-app
#   type: LoadBalancer

---
apiVersion: v1
kind: Service
metadata:
  name: test-app-service
  namespace: test-gke
  labels:
    app: test-app
spec:
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  ports:
    - name: '80-to-80'
      nodePort: 30011
      port: 80
      protocol: TCP
      targetPort: 8000
  selector:
    app: test-app
  type: NodePort

---
apiVersion: "networking.k8s.io/v1"
kind: "Ingress"
metadata:
  name: "test"
  namespace: "test-gke"
spec:
  defaultBackend:
    service:
      name: "test-app-service"
      port:
        number: 80
status:
  loadBalancer: {}
